se le dio formato al header del home

--- a/index.html
+++ b/index.html
@@ -11,22 +11,34 @@
 
 <body>
     <header><!--inicio header-->
-        <nav class="container">
-            <picture>
+        <nav class="container navbar">
+            <picture class="navbar__logo">
                 <a href="./index.html"><img src="./img/branding/logo_light_horizontal.svg"
                         alt="Isologotipo de la marca funkoshop"></a>
             </picture>
-            <ul>
+            <ul class="navbar__menu">
+                <li class="navbar__item with__submenu" >
+                    <a class="navbar__link with_icon" href="./pages/shop/shop.html">SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon></a>
+                <ul class="submenu">
+                    <li class="submenu__item">
+                        <a href="" class="submenu__link">Funkos</a>
+                    </li>
+                    <li class="submenu__item">
+                        <a href="" class="submenu__link">Remeras</a>
+                    </li>
+                    <li class="submenu__item">
+                        <a href="" class="submenu__link">Llaveros</a>
+                    </li>
+                </ul>
+                </li>
 
-                <li><a href="./pages/shop/shop.html">SHOP</a></li>
-                <li> <a href="./pages/shop/contact.html">CONTACTO</a></li>
-                <li> <a href="./pages/admin/login.html">LOGIN</a></li>
-                <li><a href="./pages/shop/cart.html"> <img src="./img/icons/cart-icon.svg" alt="icono de carrito">
-                    </a> </li>
+                <li class="navbar__item"> <a class="navbar__link" href="./pages/shop/contact.html">CONTACTO</a></li>
+                <li class="navbar__item"> <a class="navbar__link" href="./pages/admin/login.html">LOGIN</a></li>
+                <li href="./pages/shop/cart.html"> <img src="./img/icons/cart-icon.svg" alt="icono de carrito"></a> </li>
             </ul>
         </nav>
     </header><!--fin header-->
-
+<br><br><br>
     <section class="caracte-banner"><!--inicio banner-->
         <article class="container">
             <h3>Nuevos Ingresos</h3>
@@ -45,7 +57,7 @@
                 <br><br>
                 <p class="linea-3"></p>
                 <br><br>
-                <a href="./pages/shop/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
+                <a href="./pages/shop/item.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
             </ARTICLE>
             <picture>
                 <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
@@ -58,7 +70,7 @@
                 <br><br>
                 <p class="linea-3"></p>
                 <br><br>
-                <a href="./pages/shop/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
+                <a href="./pages/shop/item.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
             </ARTICLE>
             <picture>
                 <img src="./img/pokemon/vulpix-1.webp" alt="Figura coleccionable de funko vulpis de la serie pokemon">
@@ -71,7 +83,7 @@
                 <br><br>
                 <p class="linea-3"></p>
                 <br><br>
-                <a href="./pages/shop/shop.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
+                <a href="./pages/shop/item.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
             </ARTICLE>
             <picture>
                 <img src="./img/harry-potter/snape-patronus-1.webp"
@@ -124,12 +136,13 @@
             <img src="./img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
                 <li><a href="./pages/shop/shop.html">SHOP</a></li>
-                <li><a href="./pages/admin/create.html">INGRESAR</a></li>
+                <li><a href="./pages/admin/login.html">INGRESAR</a></li>
                 <li><a href="./pages/shop/contact.html">CONTACTO</a></li>
             </ul>
         </nav>
         <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!--fin footer seccion -->
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
 </body>
 
 </html>
