--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -216,7 +216,7 @@
             <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
                 <li><a href="../../pages/shop/shop.html">SHOP</a></li>
-                <li><a href="../../pages/shop/login.html">INGRESAR</a></li>
+                <li> <a href="../../pages/admin/login.html">INGRESAR</a>
                 <li><a href="../../pages/shop/contact.html">CONTACTO</a></li>
             </ul>
         </nav>
