--- a/pages/shop/contact.html
+++ b/pages/shop/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Item</title>
+    <title>contact</title>
     <link rel="stylesheet" href="../../css/index.css">
 </head>
 
