se actualizo header de shop

--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@
 
                 <li class="navbar__item"> <a class="navbar__link" href="./pages/shop/contact.html">CONTACTO</a></li>
                 <li class="navbar__item"> <a class="navbar__link" href="./pages/admin/login.html">LOGIN</a></li>
-                <li href="./pages/shop/cart.html"> <img src="./img/icons/cart-icon.svg" alt="icono de carrito"></a> </li>
+                <li> <a href="./pages/shop/cart.html"> <img src="./img/icons/cart-icon.svg" alt="icono de carrito"></a> </li>
             </ul>
         </nav>
     </header><!--fin header-->
-<br><br><br>
-    <section class="caracte-banner"><!--inicio banner-->
-        <article class="container">
-            <h3>Nuevos Ingresos</h3>
-            <p> Descubrí el próximo Funko Pop de tu colección</p>
-            <br><br>
-            <a href="./pages/shop/shop.html"><input type=button class="boton-shop" value="SHOP"></a>
+    <section class="hero"><!--inicio banner-->
+        <article class="hero__content container">
+            <h3 class="hero__title">Nuevos Ingresos</h3>
+            <p class="hero__text"> Descubrí el próximo Funko Pop de tu colección</p>
+
+            <a class="hero__link" href="./pages/shop/shop.html">SHOP</a>
         </article>
 
     </section><!--fin banner-->
