--- a/pages/shop/contact.html
+++ b/pages/shop/contact.html
@@ -10,18 +10,29 @@
 
 <body>
     <header><!--inicio header-->
-        <nav class="container">
-            <picture class="grid-item1">
-                <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg"
-                        alt="Isologotipo de la marca funkoshop"></a>
+        <nav class="container navbar">
+            <picture class="navbar__logo">
+                <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop"></a>
             </picture>
-            <ul>
+            <ul class="navbar__menu">
+                <li class="navbar__item with__submenu" >
+                    <a class="navbar__link with_icon" href="../shop/shop.html">SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon></a>
+                <ul class="submenu">
+                    <li class="submenu__item">
+                        <a href="" class="submenu__link">Funkos</a>
+                    </li>
+                    <li class="submenu__item">
+                        <a href="" class="submenu__link">Remeras</a>
+                    </li>
+                    <li class="submenu__item">
+                        <a href="" class="submenu__link">Llaveros</a>
+                    </li>
+                </ul>
+                </li>
 
-                <li><a href="../../pages/shop/shop.html">SHOP</a></li>
-                <li> <a href="../../pages/shop/contact.html">CONTACTO</a></li>
-                <li> <a href="../../pages/admin/login.html">LOGIN</a></li>
-                <li><a href="../../pages/shop/cart.html"> <img src="../../img/icons/cart-icon.svg"
-                            alt="icono de carrito"> </a> </li>
+                <li class="navbar__item"> <a class="navbar__link" href="../shop/contact.html">CONTACTO</a></li>
+                <li class="navbar__item"> <a class="navbar__link" href="../admin/login.html">LOGIN</a></li>
+                <li>  <a href="../shop/cart.html"> <img src="../../img/icons/cart-icon.svg" alt="icono de carrito"></a> </li>
             </ul>
         </nav>
     </header><!--fin header-->
