se actualizaron todos los header del admin

--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -10,17 +10,15 @@
 
 <body>
     <header><!--inicio header-->
-        <nav class="container">
-            <picture class="grid-item1">
-                <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg"
-                        alt="Isologotipo de la marca funkoshop"></a>
+        <nav class="container navbar">
+            <picture class="navbar__logo">
+                <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop"></a>
             </picture>
-            <ul>
-
-                <li><a href="../../index.html" class="list-HOME">VER TIENDA</a></li>
-                <li> <a href="./admin.html" class="list-admin">ADMIN</a></li>
-                <li> <a href="../../index.html" class="list-login">SALIR</a></li>
-
+            <ul class="navbar__menu">
+                <li class="navbar__item with__submenu" >
+                    <a class="navbar__link" href="../../index.html">VER TIENDA</a></li>
+                <li class="navbar__item"> <a class="navbar__link" href="../admin/admin.html">ADMIN</a></li>
+                <li class="navbar__item"> <a class="navbar__link" href="../../index.html">SALIR</a></li>
             </ul>
         </nav>
     </header><!--fin header-->
