--- a/index.html
+++ b/index.html
@@ -17,24 +17,26 @@
                         alt="Isologotipo de la marca funkoshop"></a>
             </picture>
             <ul class="navbar__menu">
-                <li class="navbar__item with__submenu" >
-                    <a class="navbar__link with_icon" href="./pages/shop/shop.html">SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon></a>
-                <ul class="submenu">
-                    <li class="submenu__item">
-                        <a href="" class="submenu__link">Funkos</a>
-                    </li>
-                    <li class="submenu__item">
-                        <a href="" class="submenu__link">Remeras</a>
-                    </li>
-                    <li class="submenu__item">
-                        <a href="" class="submenu__link">Llaveros</a>
-                    </li>
-                </ul>
+                <li class="navbar__item with__submenu">
+                    <a class="navbar__link with_icon" href="./pages/shop/shop.html">SHOP<iconify-icon
+                            icon="mdi:chevron-down"></iconify-icon></a>
+                    <ul class="submenu">
+                        <li class="submenu__item">
+                            <a href="" class="submenu__link">Funkos</a>
+                        </li>
+                        <li class="submenu__item">
+                            <a href="" class="submenu__link">Remeras</a>
+                        </li>
+                        <li class="submenu__item">
+                            <a href="" class="submenu__link">Llaveros</a>
+                        </li>
+                    </ul>
                 </li>
 
                 <li class="navbar__item"> <a class="navbar__link" href="./pages/shop/contact.html">CONTACTO</a></li>
                 <li class="navbar__item"> <a class="navbar__link" href="./pages/admin/login.html">LOGIN</a></li>
-                <li> <a href="./pages/shop/cart.html"> <img src="./img/icons/cart-icon.svg" alt="icono de carrito"></a> </li>
+                <li> <a href="./pages/shop/cart.html"> <img src="./img/icons/cart-icon.svg" alt="icono de carrito"></a>
+                </li>
             </ul>
         </nav>
     </header><!--fin header-->
@@ -47,44 +49,34 @@
         </article>
 
     </section><!--fin banner-->
-    <main class="container"> <!-- inicio cuerpo principal -->
-        <section class="texto-ima">
-            <ARTICLE>
-                <h3>Star Wars &
-                    The Mandalorian </h3>
-                <p>Disfruta de una saga que sigue agregando personajes a su colección.</p>
-                <br><br>
-                <p class="linea-3"></p>
-                <br><br>
-                <a href="./pages/shop/item.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
+    <main class="main-container"> <!-- inicio cuerpo principal -->
+        <section class="collection container">
+            <ARTICLE class="collection__content">
+                <h3 class="collection__title">Star Wars & The Mandalorian </h3>
+                <p class="collection__text">Disfruta de una saga que sigue agregando personajes a su colección.</p>
+                <a class="collection__link" href="./pages/shop/item.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
             </ARTICLE>
-            <picture>
+            <picture class="collection__cover">
                 <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
             </picture>
         </section><!--fin primera seccion-->
-        <section class="texto-ima-rev"><!--inicio segunda seccion-->
-            <ARTICLE>
-                <h3>POKEMON INDIGO</h3>
-                <p>Atrapa todos los que puedas y disfruta de una colección llena de amigos.</p>
-                <br><br>
-                <p class="linea-3"></p>
-                <br><br>
-                <a href="./pages/shop/item.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
+        <section class="collection container"><!--inicio segunda seccion-->
+            <ARTICLE class="collection__content">
+                <h3 class="collection__title">POKEMON INDIGO</h3>
+                <p class="collection__text">Atrapa todos los que puedas y disfruta de una colección llena de amigos.</p>
+                <a class="collection__link" href="./pages/shop/item.html">VER COLECCIÓN</a>
             </ARTICLE>
-            <picture>
+            <picture class="collection__cover">
                 <img src="./img/pokemon/vulpix-1.webp" alt="Figura coleccionable de funko vulpis de la serie pokemon">
             </picture>
         </section><!--fin segunda seccion-->
-        <section class="texto-ima"><!--inicio tercera seccion-->
-            <ARTICLE>
-                <h3>HARRY POTTER </h3>
-                <p>Revive los recuerdos de una saga llena de magia y encanto.</p>
-                <br><br>
-                <p class="linea-3"></p>
-                <br><br>
-                <a href="./pages/shop/item.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
+        <section class="collection container"><!--inicio tercera seccion-->
+            <ARTICLE class="collection__content">
+                <h3 class="collection__title">HARRY POTTER </h3>
+                <p class="collection__text">Revive los recuerdos de una saga llena de magia y encanto.</p>
+                <a class="collection__link" href="./pages/shop/item.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
             </ARTICLE>
-            <picture>
+            <picture class="collection__cover">
                 <img src="./img/harry-potter/snape-patronus-1.webp"
                     alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
             </picture>
@@ -113,8 +105,8 @@
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
-                    </a>    
-                </li>  <!--fin cuarta seccion segundo articulo-->
+                    </a>
+                </li> <!--fin cuarta seccion segundo articulo-->
                 <li>
                     <a href="">
                         <div>
@@ -124,7 +116,7 @@
                             <p id="segundo-tex">$ 1799,99</p>
                             <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
                         </div>
-                    </a>     <!--fin cuarta seccion tercer articulo-->
+                    </a> <!--fin cuarta seccion tercer articulo-->
                 </li>
             </ul>
         </section>
