--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
         </article>
 
     </section><!--fin banner-->
-    <main class="main-container"> <!-- inicio cuerpo principal -->
+    <main class="container main-container"> <!-- inicio cuerpo principal -->
         <section class="collection container">
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">Star Wars & The Mandalorian </h3>
                 <p class="collection__text">Disfruta de una saga que sigue agregando personajes a su colección.</p>
-                <a class="collection__link" href="./pages/shop/item.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
+                <a class="collection__link" href="./pages/shop/item.html"><input type=button class="boton-shop1"
+                        value="VER COLECCIÓN"></a>
             </ARTICLE>
             <picture class="collection__cover">
                 <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
@@ -74,49 +75,72 @@
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">HARRY POTTER </h3>
                 <p class="collection__text">Revive los recuerdos de una saga llena de magia y encanto.</p>
-                <a class="collection__link" href="./pages/shop/item.html"><input type=button class="boton-shop1" value="VER COLECCIÓN"></a>
+                <a class="collection__link" href="./pages/shop/item.html"><input type=button class="boton-shop1"
+                        value="VER COLECCIÓN"></a>
             </ARTICLE>
             <picture class="collection__cover">
                 <img src="./img/harry-potter/snape-patronus-1.webp"
                     alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
             </picture>
         </section><!--fin tercera seccion-->
-        <section>
+        <section class="container slider ">
             <!--inicio cuarta seccion -->
-            <h2>Últimos lanzamientos</h2>
-            <ul class="texto-ima-3">
-                <li><!--inicio cuarta seccion primer articulo-->
-                    <a href="">
-                        <div>
-                            <p class="img-card-wars"><input type=button class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">STAR WARS</p>
-                            <h4 style="margin-bottom: 13.9px">STORMTROOPER LIGHTSABER</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>
+            <h2 class="slider__title">Últimos lanzamientos</h2>
+            <ul class="container slider__items ">
+                <li class="slider__item "><!--inicio cuarta seccion primer articulo-->
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="./img/star-wars/trooper-1.webp"
+                                    alt="figura coleccionable funko star wars trooper">
+                                <img class="card-item__img--back" src="./img/star-wars/trooper-box.webp"
+                                    alt="figura coleccionable funko star wars trooper box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">STAR WARS</p>
+                                <h4 class="card-item__name">STORMTROOPER LIGHTSABER</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a>
+                    </article>
                 </li> <!--fin cuarta seccion primer articulo-->
-                <li> <!--inicio cuarta seccion segundo articulo-->
-                    <a href="">
-                        <div>
-                            <p class="img-card-pokemon"><input type=button class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">POKEMON</p>
-                            <h4 style="margin-bottom: 13.9px">PIDGEOTTO</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>
+                <li class="slider__item"> <!--inicio cuarta seccion segundo articulo-->
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="./img/pokemon/pidgeotto-1.webp" alt="figura coleccionable funko pokemon pidgeotto">
+                                <img class="card-item__img--back" src="./img/pokemon/pidgeotto-box.webp" alt="figura coleccionable funko pokemon pidgeotto box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">POKEMON</p>
+                                <h4 class="card-item__name">PIDGEOTTO</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a>
+                    </article>
                 </li> <!--fin cuarta seccion segundo articulo-->
-                <li>
-                    <a href="">
-                        <div>
-                            <p class="img-card-potter"><input type=button class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">HARRY POTTER</p>
-                            <h4 style="margin-bottom: 13.9px">LUNA LOVEGOOD LION MASK</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a> <!--fin cuarta seccion tercer articulo-->
+                <li class="slider__item">
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="./img/harry-potter/luna-1.webp"
+                                    alt="figura coleccionable funko Harru-potter luna">
+                                <img class="card-item__img--back" src="./img/harry-potter/luna-box.webp"
+                                    alt="figura coleccionable funko Harru-potter luna box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">HARRY POTTER</p>
+                                <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a> <!--fin cuarta seccion tercer articulo-->
+                    </article>
                 </li>
             </ul>
         </section>
