se siguio corriguiendo el home sin poder achicar el slider

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">Star Wars & The Mandalorian </h3>
                 <p class="collection__text">Disfruta de una saga que sigue agregando personajes a su colección.</p>
-                <a class="collection__link" href="./pages/shop/item.html"><input type=button class="boton-shop1"
-                        value="VER COLECCIÓN"></a>
+                <a class="collection__link" href="./pages/shop/item.html">VER COLECCIÓN</a>
             </ARTICLE>
             <picture class="collection__cover">
                 <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
@@ -75,18 +74,17 @@
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">HARRY POTTER </h3>
                 <p class="collection__text">Revive los recuerdos de una saga llena de magia y encanto.</p>
-                <a class="collection__link" href="./pages/shop/item.html"><input type=button class="boton-shop1"
-                        value="VER COLECCIÓN"></a>
+                <a class="collection__link" href="./pages/shop/item.html">VER COLECCIÓN</a>
             </ARTICLE>
             <picture class="collection__cover">
                 <img src="./img/harry-potter/snape-patronus-1.webp"
                     alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
             </picture>
         </section><!--fin tercera seccion-->
-        <section class="container slider ">
+        <section class="slider container ">
             <!--inicio cuarta seccion -->
             <h2 class="slider__title">Últimos lanzamientos</h2>
-            <ul class="container slider__items ">
+            <ul class="slider__items container">
                 <li class="slider__item "><!--inicio cuarta seccion primer articulo-->
                     <article class="card-item">
                         <a class="card-item__link" href="">
@@ -111,8 +109,10 @@
                         <a class="card-item__link" href="">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
-                                <img class="card-item__img--front" src="./img/pokemon/pidgeotto-1.webp" alt="figura coleccionable funko pokemon pidgeotto">
-                                <img class="card-item__img--back" src="./img/pokemon/pidgeotto-box.webp" alt="figura coleccionable funko pokemon pidgeotto box">
+                                <img class="card-item__img--front" src="./img/pokemon/pidgeotto-1.webp"
+                                    alt="figura coleccionable funko pokemon pidgeotto">
+                                <img class="card-item__img--back" src="./img/pokemon/pidgeotto-box.webp"
+                                    alt="figura coleccionable funko pokemon pidgeotto box">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__licence">POKEMON</p>
