se corrigio el home y el shop

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <section class="slider container ">
             <!--inicio cuarta seccion -->
             <h2 class="slider__title">Últimos lanzamientos</h2>
-            <ul class="slider__items container">
+            <ul class="slider__items">
                 <li class="slider__item "><!--inicio cuarta seccion primer articulo-->
                     <article class="card-item">
                         <a class="card-item__link" href="">
