--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -93,118 +93,181 @@
             </section>
         </aside>
         <div>
-            <ul class="texto-ima-3-pequeño-shop">
-                <li><!--inicio cuarta seccion primer articulo-->
-                    <a href="">
-                        <div>
-                            <p class="img-card-wars" style="width: 304px; background-size: 108%;"><input type=button
-                                    class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">STAR WARS</p>
-                            <h4 style="margin-bottom: 13.9px">STORMTROOPER LIGHTSABER</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>
+            <ul class="slider__items">
+                <li class="slider__item "><!--inicio cuarta seccion primer articulo-->
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="../../img/star-wars/trooper-1.webp"
+                                    alt="figura coleccionable funko star wars trooper">
+                                <img class="card-item__img--back" src="../../img/star-wars/trooper-box.webp"
+                                    alt="figura coleccionable funko star wars trooper box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">STAR WARS</p>
+                                <h4 class="card-item__name">STORMTROOPER LIGHTSABER</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a>
+                    </article>
                 </li> <!--fin cuarta seccion primer articulo-->
-                <li> <!--inicio cuarta seccion segundo articulo-->
-                    <a href="">
-                        <div>
-                            <p class="img-card-pokemon" style="width: 304px; background-size: 108%;"><input type=button
-                                    class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">POKEMON</p>
-                            <h4 style="margin-bottom: 13.9px">PIDGEOTTO</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>
+                <li class="slider__item"> <!--inicio cuarta seccion segundo articulo-->
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="../../img/pokemon/pidgeotto-1.webp"
+                                    alt="figura coleccionable funko pokemon pidgeotto">
+                                <img class="card-item__img--back" src="../../img/pokemon/pidgeotto-box.webp"
+                                    alt="figura coleccionable funko pokemon pidgeotto box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">POKEMON</p>
+                                <h4 class="card-item__name">PIDGEOTTO</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a>
+                    </article>
                 </li> <!--fin cuarta seccion segundo articulo-->
-                <li>
-                    <a href="">
-                        <div>
-                            <p class="img-card-potter" style="width: 304px; background-size: 108%;"><input type=button
-                                    class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">HARRY POTTER</p>
-                            <h4 style="margin-bottom: 13.9px">LUNA LOVEGOOD LION MASK</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a> <!--fin cuarta seccion tercer articulo-->
+                <li class="slider__item">
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="../../img/harry-potter/luna-1.webp"
+                                    alt="figura coleccionable funko Harru-potter luna">
+                                <img class="card-item__img--back" src="../../img/harry-potter/luna-box.webp"
+                                    alt="figura coleccionable funko Harru-potter luna box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">HARRY POTTER</p>
+                                <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a> <!--fin cuarta seccion tercer articulo-->
+                    </article>
                 </li>
             </ul>
-            <ul class="texto-ima-3-pequeño-shop">
-                <li><!--inicio cuarta seccion primer articulo-->
-                    <a href="">
-                        <div>
-                            <p class="img-card-wars" style="width: 304px; background-size: 108%;"><input type=button
-                                    class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">STAR WARS</p>
-                            <h4 style="margin-bottom: 13.9px">STORMTROOPER LIGHTSABER</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>
+            <ul class="slider__items">
+                <li class="slider__item "><!--inicio cuarta seccion primer articulo-->
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="../../img/star-wars/trooper-1.webp"
+                                    alt="figura coleccionable funko star wars trooper">
+                                <img class="card-item__img--back" src="../../img/star-wars/trooper-box.webp"
+                                    alt="figura coleccionable funko star wars trooper box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">STAR WARS</p>
+                                <h4 class="card-item__name">STORMTROOPER LIGHTSABER</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a>
+                    </article>
                 </li> <!--fin cuarta seccion primer articulo-->
-                <li> <!--inicio cuarta seccion segundo articulo-->
-                    <a href="">
-                        <div>
-                            <p class="img-card-pokemon" style="width: 304px; background-size: 108%;"><input type=button
-                                    class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">POKEMON</p>
-                            <h4 style="margin-bottom: 13.9px">PIDGEOTTO</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>
+                <li class="slider__item"> <!--inicio cuarta seccion segundo articulo-->
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="../../img/pokemon/pidgeotto-1.webp"
+                                    alt="figura coleccionable funko pokemon pidgeotto">
+                                <img class="card-item__img--back" src="../../img/pokemon/pidgeotto-box.webp"
+                                    alt="figura coleccionable funko pokemon pidgeotto box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">POKEMON</p>
+                                <h4 class="card-item__name">PIDGEOTTO</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a>
+                    </article>
                 </li> <!--fin cuarta seccion segundo articulo-->
-                <li>
-                    <a href="">
-                        <div>
-                            <p class="img-card-potter" style="width: 304px; background-size: 108%;"><input type=button
-                                    class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">HARRY POTTER</p>
-                            <h4 style="margin-bottom: 13.9px">LUNA LOVEGOOD LION MASK</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a> <!--fin cuarta seccion tercer articulo-->
+                <li class="slider__item">
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="../../img/harry-potter/luna-1.webp"
+                                    alt="figura coleccionable funko Harru-potter luna">
+                                <img class="card-item__img--back" src="../../img/harry-potter/luna-box.webp"
+                                    alt="figura coleccionable funko Harru-potter luna box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">HARRY POTTER</p>
+                                <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a> <!--fin cuarta seccion tercer articulo-->
+                    </article>
                 </li>
             </ul>
-            <ul class="texto-ima-3-pequeño-shop">
-                <li><!--inicio cuarta seccion primer articulo-->
-                    <a href="">
-                        <div>
-                            <p class="img-card-wars" style="width: 304px; background-size: 108%;"><input type=button
-                                    class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">STAR WARS</p>
-                            <h4 style="margin-bottom: 13.9px">STORMTROOPER LIGHTSABER</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>
+            <ul class="slider__items">
+                <li class="slider__item "><!--inicio cuarta seccion primer articulo-->
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="../../img/star-wars/trooper-1.webp"
+                                    alt="figura coleccionable funko star wars trooper">
+                                <img class="card-item__img--back" src="../../img/star-wars/trooper-box.webp"
+                                    alt="figura coleccionable funko star wars trooper box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">STAR WARS</p>
+                                <h4 class="card-item__name">STORMTROOPER LIGHTSABER</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a>
+                    </article>
                 </li> <!--fin cuarta seccion primer articulo-->
-                <li> <!--inicio cuarta seccion segundo articulo-->
-                    <a href="">
-                        <div>
-                            <p class="img-card-pokemon" style="width: 304px; background-size: 108%;"><input type=button
-                                    class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">POKEMON</p>
-                            <h4 style="margin-bottom: 13.9px">PIDGEOTTO</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>
+                <li class="slider__item"> <!--inicio cuarta seccion segundo articulo-->
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="../../img/pokemon/pidgeotto-1.webp"
+                                    alt="figura coleccionable funko pokemon pidgeotto">
+                                <img class="card-item__img--back" src="../../img/pokemon/pidgeotto-box.webp"
+                                    alt="figura coleccionable funko pokemon pidgeotto box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">POKEMON</p>
+                                <h4 class="card-item__name">PIDGEOTTO</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a>
+                    </article>
                 </li> <!--fin cuarta seccion segundo articulo-->
-                <li>
-                    <a href="">
-                        <div>
-                            <p class="img-card-potter" style="width: 304px; background-size: 108%;"><input type=button
-                                    class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">HARRY POTTER</p>
-                            <h4 style="margin-bottom: 13.9px">LUNA LOVEGOOD LION MASK</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a> <!--fin cuarta seccion tercer articulo-->
+                <li class="slider__item">
+                    <article class="card-item">
+                        <a class="card-item__link" href="">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">NUEVO</span>
+                                <img class="card-item__img--front" src="../../img/harry-potter/luna-1.webp"
+                                    alt="figura coleccionable funko Harru-potter luna">
+                                <img class="card-item__img--back" src="../../img/harry-potter/luna-box.webp"
+                                    alt="figura coleccionable funko Harru-potter luna box">
+                            </picture>
+                            <div class="card-item__content">
+                                <p class="card-item__licence">HARRY POTTER</p>
+                                <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
+                                <p class="card-item__price">$ 1799,99</p>
+                                <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                            </div>
+                        </a> <!--fin cuarta seccion tercer articulo-->
+                    </article>
                 </li>
             </ul>
         </div>
