se corrigio el css del admin

--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -29,8 +29,8 @@
         </article>
         <article class="listProducto">
             <h2 class="alinearItem">LISTADO DE PRODUCTOS</h2>
-            <h4>AGREGAR</h4>
-            <img src="../../img/icons/mdi_plus-box.svg" alt="simbolo + ">
+            <h4 class="title_agregar">AGREGAR</h4>
+            <img class="img__mas" src="../../img/icons/mdi_plus-box.svg" alt="simbolo + ">
         </article>
         <div style="margin-bottom: 30px;">
             <ul>
@@ -45,8 +45,8 @@
                     <p>STW001001</p>
                     <p>Baby Yoda Blueball</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></td>
                     </p>
                 </li>
                 <li class="tablaItemsOl">
@@ -54,96 +54,96 @@
                     <p>STW001002</p>
                     <p>Boba Fett Fighter</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
                 <li class="tablaItemsOl">
                     <p>3</p>
                     <p>STW001003</p>
                     <p>Luke Skywalker & Grogu</p>
                     <p>STAR WARS</td>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
                 <li class="tablaItemsOl">
                     <p>4</p>
                     <p>STW001004</p>
                     <p>Stormtrooper Lightsaber</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
                 <li class="tablaItemsOl">
                     <p>5</p>
                     <p>PKM001001</p>
                     <p>Boba Fett Fighter</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
                 <li class="tablaItemsOl">
                     <p>6</p>
                     <p>PKM001002</p>
                     <p>Boba Fett Fighter</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
                 <li class="tablaItemsOl">
                     <p>7</p>
                     <p>PKM001003</p>
                     <p>Boba Fett Fighter</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
                 <li class="tablaItemsOl">
                     <p>8</p>
                     <p>PKM001004</p>
                     <p>Boba Fett Fighter</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
                 <li class="tablaItemsOl">
                     <p>9</p>
                     <p>PKM001005</p>
                     <p>Boba Fett Fighter</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
                 <li class="tablaItemsOl">
                     <p>10</p>
                     <p>HPT001001</p>
                     <p>Boba Fett Fighter</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
                 <li class="tablaItemsOl">
                     <p>11</p>
                     <p>HPT001002</p>
                     <p>Boba Fett Fighter</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
                 <li class="tablaItemsOl">
                     <p>12</p>
                     <p>HPT001003</p>
                     <p>Boba Fett Fighter</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
                 <li class="tablaItemsOl">
                     <p>13</p>
                     <p>HPT001004</p>
                     <p>Boba Fett Fighter</p>
                     <p>STAR WARS</p>
-                    <p><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
-                    <p><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
+                    <p class="img_pen"><img src="../../img/icons/edit_pencil.svg" alt="icono de editar"></p>
+                    <p class="img_delete"><img src="../../img/icons/delete_trash.svg" alt="icono de borrar"></p>
                 </li>
             </ul>
         </div>
