--- a/pages/shop/cart.html
+++ b/pages/shop/cart.html
@@ -151,7 +151,7 @@
                     <a href="../../pages/shop/shop.html">SHOP</a>
                 </li>
                 <li>
-                    <a href="../../pages/shop/login.html">INGRESAR</a>
+                    <a href="../../pages/admin/login.html">INGRESAR</a>
                 </li>
                 <li>
                     <a href="../../pages/shop/contact.html">CONTACTO</a>
