se corrigen de los html y los css, la identacion y el tipeo de etiquetas. tambien se agrega el favicon a todos los html

--- a/pages/admin/register.html
+++ b/pages/admin/register.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>create</title>
+    <title>Funkoshop | Register</title>
     <link rel="stylesheet" href="../../css/index.css">
+    <link rel="icon" href="../../img/branding/isotype.svg">
 </head>
 
 <body>
-    <header><!--inicio header-->
+    <header><!-- inicio header -->
         <nav class="container navbar">
             <picture class="navbar__logo">
                 <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop"></a>
             </picture>
             <ul class="navbar__menu">
-                <li class="navbar__item with__submenu" >
-                    <a class="navbar__link" href="../../index.html">VER TIENDA</a></li>
+                <li class="navbar__item with__submenu">
+                    <a class="navbar__link" href="../../pages/shop/shop.html">VER TIENDA</a>
+                </li>
                 <li class="navbar__item"> <a class="navbar__link" href="../admin/admin.html">ADMIN</a></li>
                 <li class="navbar__item"> <a class="navbar__link" href="../../index.html">SALIR</a></li>
             </ul>
         </nav>
-    </header><!--fin header-->
-    <main class="register-all"><!--inicio cuerpo principal-->
+    </header><!-- fin header -->
+
+    <main class="register-all"><!-- inicio cuerpo principal -->
         <div class="register">
             <span class="register-box">
-                <section> <!--Inicio de primera fila-->
+                <section><!-- Inicio de primera fila -->
                     <span class="register-header">
                         <h1>CREA TU CUENTA</h1>
                     </span>
-                </section><!--fin de la primera fila-->
-                <section><!--inicio de la segunda fila-->
+                </section><!-- fin de la primera fila -->
+
+                <section><!-- inicio de la segunda fila -->
                     <div class="texto">Completa el formulario para ser parte del mundo de los Funkos</div>
-                </section><!--fin de la segunda fila-->
-                <div class="datos-reg">
-                    <section><!--inicio de la tercera fila-->
-                        <div >
+                </section><!-- fin de la segunda fila -->
+
+                <div class="datos-reg"><!-- inicio de la tercera fila -->
+                    <section>
+                        <div>
                             <ul class="datospersonales">
                                 <li>
                                     <form class="datospersonales1" action="#">
                                         <label class="txt" for="nombre">Nombre:</label>
                                         <input class="complete" type="nombre" id="nombre" name="nombre" placeholder="John">
                                     </form>
-
                                 </li>
                                 <li>
                                     <form class="datospersonales1" action="#">
@@ -52,7 +56,7 @@
                                 </li>
                                 <li>
                                     <form class="datospersonales1" action="#">
-                                        <label class="txt"  for="email">Email:</label>
+                                        <label class="txt" for="email">Email:</label>
                                         <input class="complete" type="email" id="email" name="email" placeholder="johndoe@correo.com">
                                     </form>
                                 </li>
@@ -63,13 +67,11 @@
                                     </form>
                                 </li>
                                 <li>
-                                    <form  class="datospersonales1" action="#">
+                                    <form class="datospersonales1" action="#">
                                         <label class="txt" for="pwd">Repita Contraseña:</label>
                                         <input class="complete" type="password" id="pwd1" name="pwd" placeholder=" ">
                                     </form>
                                 </li>
-                                
-                                
                             </ul>
                             <section class="regisYaceptar">
                                 <span class="datospers2">
@@ -81,15 +83,15 @@
                                         <label class="txt2" for="acep"> Acepto <a class="txt3" href="#">Términos y Condiciones</a></label><br>
                                     </form>
                                 </span>
-                            </section>        
+                            </section>
                         </div>
-                    </section><!--fin de la tercera fila-->
-                </div>  
-            </span>    
+                    </section>
+                </div><!-- fin de la tercera fila -->
+            </span>
         </div>
-    </main><!--fin cuerpo principal-->
+    </main><!-- fin cuerpo principal -->
 
-    <footer><!--inicio footer seccion -->
+    <footer><!-- inicio footer seccion -->
         <nav class="container">
             <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
@@ -100,8 +102,6 @@
             </ul>
         </nav>
         <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
-    </footer><!--fin footer seccion -->
-
+    </footer><!-- fin footer seccion -->
 </body>
-
 </html>
