--- a/pages/shop/cart.html
+++ b/pages/shop/cart.html
@@ -4,62 +4,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito</title>
+    <title>Funkoshop | Carrito</title>
     <link rel="stylesheet" href="../../css/index.css">
+    <link rel="icon" href="../../img/branding/isotype.svg">
 </head>
 
 <body>
-    <header><!--inicio header-->
+    <header><!-- inicio header -->
         <nav class="container navbar">
             <picture class="navbar__logo">
                 <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop"></a>
             </picture>
             <ul class="navbar__menu">
-                <li class="navbar__item with__submenu" >
+                <li class="navbar__item with__submenu">
                     <a class="navbar__link with_icon" href="../shop/shop.html">SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon></a>
-                <ul class="submenu">
-                    <li class="submenu__item">
-                        <a href="" class="submenu__link">Funkos</a>
-                    </li>
-                    <li class="submenu__item">
-                        <a href="" class="submenu__link">Remeras</a>
-                    </li>
-                    <li class="submenu__item">
-                        <a href="" class="submenu__link">Llaveros</a>
-                    </li>
-                </ul>
+                    <ul class="submenu">
+                        <li class="submenu__item">
+                            <a href="../../pages/shop/shop.html" class="submenu__link">Funkos</a>
+                        </li>
+                        <li class="submenu__item">
+                            <a href="../../pages/shop/shop.html" class="submenu__link">Remeras</a>
+                        </li>
+                        <li class="submenu__item">
+                            <a href="../../pages/shop/shop.html" class="submenu__link">Llaveros</a>
+                        </li>
+                    </ul>
                 </li>
-
                 <li class="navbar__item"> <a class="navbar__link" href="../shop/contact.html">CONTACTO</a></li>
                 <li class="navbar__item"> <a class="navbar__link" href="../admin/login.html">LOGIN</a></li>
-                <li>  <a href="../shop/cart.html"> <img src="../../img/icons/cart-icon.svg" alt="icono de carrito"></a> </li>
+                <li> <a href="../shop/cart.html"> <img src="../../img/icons/cart-icon.svg" alt="icono de carrito"></a>
+                </li>
             </ul>
         </nav>
-    </header><!--fin header-->
+    </header><!-- fin header -->
 
     <main class="container mainCart"><!-- INICIO MAIN -->
         <section class="titles"><!-- inicio TITULOS-->
-            <h1 class="title" >CARRITO DE COMPRAS</h1>
+            <h1 class="title">CARRITO DE COMPRAS</h1>
             <div class="cart_titles border_style">
                 <h2>DETALLE DE PRODUCTO</li>
-                <h2>CANTIDAD</li>
-                <h2>TOTAL</li>
+                    <h2>CANTIDAD</li>
+                        <h2>TOTAL</li>
             </div>
         </section>
 
         <section class="cart_item border_style"><!-- inicio PRODUCTO 1 -->
             <article class="item_description">
                 <picture class="item_img">
-                    <img src="../../img/star-wars/baby-yoda-1.webp" class="item_img" alt="Figura Funko Pop Grogu - The Mandalorian">
+                    <img src="../../img/star-wars/baby-yoda-1.webp" class="item_img"
+                        alt="Figura Funko Pop Grogu - The Mandalorian">
                 </picture>
                 <div class="item_titles">
                     <div class="item_texts">
-                        <h5 class="name_item" >BABY YODA BLUEBALL</h5>
+                        <h5 class="name_item">BABY YODA BLUEBALL</h5>
                         <h3 class="saga_item">STAR WARS</h3>
                         <br>
                         <p class="price_item">precio: $1799,99</p>
                     </div>
-                    
                 </div>
             </article>
             <article class="item_cant">
@@ -151,7 +152,7 @@
                     <a href="../../pages/shop/shop.html">SHOP</a>
                 </li>
                 <li>
-                    <a href="../../pages/shop/login.html">INGRESAR</a>
+                    <a href="../../pages/admin/login.html">INGRESAR</a>
                 </li>
                 <li>
                     <a href="../../pages/shop/contact.html">CONTACTO</a>
@@ -161,5 +162,4 @@
         <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!-- FIN FOOTER -->
 </body>
-
 </html>
