--- a/index.html
+++ b/index.html
@@ -1,99 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home / fuskoshop </title>
+    <title>Funkoshop | Home</title>
     <link rel="stylesheet" href="./css/index.css">
-
+    <link rel="icon" href="./img/branding/isotype.svg">
 </head>
 
 <body>
-    <header><!--inicio header-->
+    <header><!-- inicio header -->
         <nav class="container navbar">
             <picture class="navbar__logo">
-                <a href="./index.html"><img src="./img/branding/logo_light_horizontal.svg"
-                        alt="Isologotipo de la marca funkoshop"></a>
+                <a href="./index.html"><img src="./img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop"></a>
             </picture>
             <ul class="navbar__menu">
                 <li class="navbar__item with__submenu">
-                    <a class="navbar__link with_icon" href="./pages/shop/shop.html">SHOP<iconify-icon
-                            icon="mdi:chevron-down"></iconify-icon></a>
+                    <a class="navbar__link with_icon" href="./pages/shop/shop.html">SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon></a>
                     <ul class="submenu">
                         <li class="submenu__item">
-                            <a href="" class="submenu__link">Funkos</a>
+                            <a href="./pages/shop/shop.html" class="submenu__link">Funkos</a>
                         </li>
                         <li class="submenu__item">
-                            <a href="" class="submenu__link">Remeras</a>
+                            <a href="./pages/shop/shop.html" class="submenu__link">Remeras</a>
                         </li>
                         <li class="submenu__item">
-                            <a href="" class="submenu__link">Llaveros</a>
+                            <a href="./pages/shop/shop.html" class="submenu__link">Llaveros</a>
                         </li>
                     </ul>
                 </li>
-
                 <li class="navbar__item"> <a class="navbar__link" href="./pages/shop/contact.html">CONTACTO</a></li>
                 <li class="navbar__item"> <a class="navbar__link" href="./pages/admin/login.html">LOGIN</a></li>
                 <li> <a href="./pages/shop/cart.html"> <img src="./img/icons/cart-icon.svg" alt="icono de carrito"></a>
                 </li>
             </ul>
         </nav>
-    </header><!--fin header-->
-    <section class="hero"><!--inicio banner-->
+    </header><!-- fin header -->
+
+    <section class="hero"><!-- inicio banner -->
         <article class="hero__content container">
             <h3 class="hero__title">Nuevos Ingresos</h3>
             <p class="hero__text"> Descubrí el próximo Funko Pop de tu colección</p>
-
-            <a class="hero__link" href="./pages/shop/shop.html">SHOP</a>
+            <a class="hero__link" href="./pages/shop/shop.html">SHOP</a> <!-- ver, no funciona por el z-index -->
         </article>
-
-    </section><!--fin banner-->
+    </section><!-- fin banner -->
+    
     <main class="container main-container"> <!-- inicio cuerpo principal -->
-        <section class="collection container">
+        <section class="collection container"><!-- inicio primera seccion -->
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">Star Wars & The Mandalorian </h3>
                 <p class="collection__text">Disfruta de una saga que sigue agregando personajes a su colección.</p>
-                <a class="collection__link" href="./pages/shop/item.html">VER COLECCIÓN</a>
+                <a class="collection__link" href="./pages/shop/shop.html">VER COLECCIÓN</a>
             </ARTICLE>
             <picture class="collection__cover">
                 <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
             </picture>
-        </section><!--fin primera seccion-->
-        <section class="collection container"><!--inicio segunda seccion-->
+        </section><!-- fin primera seccion -->
+
+        <section class="collection container"><!-- inicio segunda seccion -->
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">POKEMON INDIGO</h3>
                 <p class="collection__text">Atrapa todos los que puedas y disfruta de una colección llena de amigos.</p>
-                <a class="collection__link" href="./pages/shop/item.html">VER COLECCIÓN</a>
+                <a class="collection__link" href="./pages/shop/shop.html">VER COLECCIÓN</a>
             </ARTICLE>
             <picture class="collection__cover">
                 <img src="./img/pokemon/vulpix-1.webp" alt="Figura coleccionable de funko vulpis de la serie pokemon">
             </picture>
-        </section><!--fin segunda seccion-->
-        <section class="collection container"><!--inicio tercera seccion-->
+        </section><!-- fin segunda seccion -->
+
+        <section class="collection container"><!-- inicio tercera seccion -->
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">HARRY POTTER </h3>
                 <p class="collection__text">Revive los recuerdos de una saga llena de magia y encanto.</p>
-                <a class="collection__link" href="./pages/shop/item.html">VER COLECCIÓN</a>
+                <a class="collection__link" href="./pages/shop/shop.html">VER COLECCIÓN</a>
             </ARTICLE>
             <picture class="collection__cover">
                 <img src="./img/harry-potter/snape-patronus-1.webp"
                     alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
             </picture>
-        </section><!--fin tercera seccion-->
-        <section class="slider container ">
-            <!--inicio cuarta seccion -->
+        </section><!-- fin tercera seccion -->
+
+        <section class="slider container "><!-- inicio cuarta seccion -->
             <h2 class="slider__title">Últimos lanzamientos</h2>
             <ul class="slider__items">
-                <li class="slider__item "><!--inicio cuarta seccion primer articulo-->
+                <li class="slider__item "><!-- inicio cuarta seccion primer articulo -->
                     <article class="card-item">
-                        <a class="card-item__link" href="">
+                        <a class="card-item__link" href="./pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
-                                <img class="card-item__img--front" src="./img/star-wars/trooper-1.webp"
-                                    alt="figura coleccionable funko star wars trooper">
-                                <img class="card-item__img--back" src="./img/star-wars/trooper-box.webp"
-                                    alt="figura coleccionable funko star wars trooper box">
+                                <img class="card-item__img--front" src="./img/star-wars/trooper-1.webp" alt="figura coleccionable funko star wars trooper">
+                                <img class="card-item__img--back" src="./img/star-wars/trooper-box.webp" alt="figura coleccionable funko star wars trooper box">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__licence">STAR WARS</p>
@@ -103,16 +100,15 @@
                             </div>
                         </a>
                     </article>
-                </li> <!--fin cuarta seccion primer articulo-->
-                <li class="slider__item"> <!--inicio cuarta seccion segundo articulo-->
+                </li><!-- fin cuarta seccion primer articulo -->
+
+                <li class="slider__item"><!-- inicio cuarta seccion segundo articulo -->
                     <article class="card-item">
-                        <a class="card-item__link" href="">
+                        <a class="card-item__link" href="./pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
-                                <img class="card-item__img--front" src="./img/pokemon/pidgeotto-1.webp"
-                                    alt="figura coleccionable funko pokemon pidgeotto">
-                                <img class="card-item__img--back" src="./img/pokemon/pidgeotto-box.webp"
-                                    alt="figura coleccionable funko pokemon pidgeotto box">
+                                <img class="card-item__img--front" src="./img/pokemon/pidgeotto-1.webp" alt="figura coleccionable funko pokemon pidgeotto">
+                                <img class="card-item__img--back" src="./img/pokemon/pidgeotto-box.webp" alt="figura coleccionable funko pokemon pidgeotto box">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__licence">POKEMON</p>
@@ -122,16 +118,15 @@
                             </div>
                         </a>
                     </article>
-                </li> <!--fin cuarta seccion segundo articulo-->
-                <li class="slider__item">
+                </li><!-- fin cuarta seccion segundo articulo -->
+
+                <li class="slider__item"><!-- inicio cuarta seccion tercer articulo -->
                     <article class="card-item">
-                        <a class="card-item__link" href="">
+                        <a class="card-item__link" href="./pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
-                                <img class="card-item__img--front" src="./img/harry-potter/luna-1.webp"
-                                    alt="figura coleccionable funko Harru-potter luna">
-                                <img class="card-item__img--back" src="./img/harry-potter/luna-box.webp"
-                                    alt="figura coleccionable funko Harru-potter luna box">
+                                <img class="card-item__img--front" src="./img/harry-potter/luna-1.webp" alt="figura coleccionable funko Harru-potter luna">
+                                <img class="card-item__img--back" src="./img/harry-potter/luna-box.webp" alt="figura coleccionable funko Harru-potter luna box">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__licence">HARRY POTTER</p>
@@ -139,14 +134,14 @@
                                 <p class="card-item__price">$ 1799,99</p>
                                 <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
                             </div>
-                        </a> <!--fin cuarta seccion tercer articulo-->
+                        </a> <!-- fin cuarta seccion tercer articulo -->
                     </article>
                 </li>
             </ul>
         </section>
+    </main><!-- fin cuerpo principal -->
 
-    </main>
-    <footer><!--inicio footer seccion -->
+    <footer><!-- inicio footer seccion -->
         <nav class="container">
             <img src="./img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
@@ -156,8 +151,7 @@
             </ul>
         </nav>
         <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
-    </footer><!--fin footer seccion -->
+    </footer><!-- fin footer seccion -->
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
 </body>
-
 </html>
