--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin</title>
+    <title>Funkoshop | Admin</title>
     <link rel="stylesheet" href="../../css/index.css">
+    <link rel="icon" href="../../img/branding/isotype.svg">
 </head>
 
 <body>
-    <header><!--inicio header-->
+    <header><!-- inicio header -->
         <nav class="container navbar">
             <picture class="navbar__logo">
                 <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop"></a>
             </picture>
             <ul class="navbar__menu">
                 <li class="navbar__item with__submenu" >
-                    <a class="navbar__link" href="../../index.html">VER TIENDA</a></li>
+                    <a class="navbar__link" href="../../pages/shop/shop.html">VER TIENDA</a></li>
                 <li class="navbar__item"> <a class="navbar__link" href="../admin/admin.html">ADMIN</a></li>
                 <li class="navbar__item"> <a class="navbar__link" href="../../index.html">SALIR</a></li>
             </ul>
         </nav>
-    </header><!--fin header-->
+    </header><!-- fin header -->
+
     <main class="container">
         <article class="buscarItem">
             <img src="../../img/icons/search_icon.svg" alt="icono de búsqueda" class="tamañoImagen">
@@ -149,7 +151,7 @@
         </div>
     </main>
 
-    <footer><!--inicio footer seccion -->
+    <footer><!-- inicio footer seccion -->
         <nav class="container">
             <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
             <ul>
@@ -160,8 +162,6 @@
             </ul>
         </nav>
         <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
-    </footer><!--fin footer seccion -->
-
+    </footer><!-- fin footer seccion -->
 </body>
-
 </html>
